[package]
name = "packer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = { version = "0.15.1", features = ["roblox"] }
toml = "0.5.9"
clap = { version = "3.2.16", features = ["derive"] }
